--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -1,16 +1,20 @@
-body {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 a {
     text-decoration: none;
     color: inherit;
 }
-
-ol,
 ul,
-li {
+ol {
     list-style: none;
+}
+button,
+input {
+    font: inherit;
+}
+:focus {
+    outline: none;
 }
